update to save news into db in cron job.

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
 - description: "hourly data refresh"
-  url: /hourly_data_refresh
+  url: /api/hourly_data_refresh
   schedule: every 60 minutes
